log/build_2022-03-10_17-01-12/dbr_pubsub/stderr.log
  File "/home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub/dbr_pub.py", line 553
    count+=1dl_Error_2
            ^
SyntaxError: invalid syntax

